Refactor(Player): use stream.toList() instead of Collectors.toList() inside getItemsInBag() method